--- a/week-01/css/styles.css
+++ b/week-01/css/styles.css
@@ -1,12 +1,20 @@
-#rectangle {
+.square-A {
     background-color: blue;
-    height: 150px;
-    width: 350px;
-    margin: 15px;
+    height: 750px;
+    width: 750px;
 }
-.square {
+.square-B {
     background-color: green;
-    height: 150px;
-    width: 150px;
-    margin: 15px
+    height: 50%;
+    width: 50%;
+}
+.square-C {
+    background-color: yellow;
+    height: 50%;
+    width: 50%;
+}
+.square-D {
+    background-color: red;
+    height: 50%;
+    width: 50%;
 }
