--- a/week-01/css/styles.css
+++ b/week-01/css/styles.css
@@ -7,5 +7,16 @@
     background-color: green;
     height: 150px;
     width: 150px;
+    position: relative;
     border: solid black;
+}
+.innersquare {
+    background-color: blue;
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: solid black;    
 }
