--- a/week-02/css/style.css
+++ b/week-02/css/style.css
@@ -1,16 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cookie&family=Quicksand:wght@300;500;700&display=swap');
+
+
 :root {
     font-size: 24px;
 }
 
 body {
-    background-color: black;
-    color: white;
+    background-color: lightgrey;
+    color: black;
+    font-family: 'Cookie', cursive;
+}
+
+h1 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: bold;
+    font-size: 80px;
 }
 
 h2 {
-    color: aqua;
-    font-size: 1.5rem;
+    color: #823B17;
+    font-size: 60px;
 
+}
+
+h3 {
+    color: #A34A1D;
+    font-size: 40px;
+}
+
+h4 {
+    color: #C45923;
+    font-size: 20px;
+}
+
+img {
+    border: 5px solid black;
+}
+
+ul { 
+    list-style: none;
+}
+
+ul li::before {
+    content: '\2605';
+    color: #823B17;    
 }
 
 .title2 {
@@ -32,7 +66,45 @@ h2 .title2 #thetitle {
 }
 
 .rectangle {
-    background-color: rgb(212,111,23);
-    height: 50vh;
-    width: 75vw;
+    background-color: green;
+    height: 100px;
+    width: 100px;
+    position: relative;
+    top: 25px;
+    left: 25px;
+}
+
+.sq1 {
+    background-color: beige;
+    height: 350px;
+    width: 350px;
+    position: relative;
+    top: 50px;
+}
+
+.sq2 {
+    background-color: blue;
+    height: 300px;
+    width: 300px;
+    position: absolute;
+    top: 25px;
+    left: 25px;
+}
+
+.sq3 {
+    background-color: brown;
+    height: 250px;
+    width: 250px;
+    position: absolute;
+    top: 25px;
+    left: 25px;    
+}
+
+.sq4 {
+    background-color: cornflowerblue;
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    top: 25px;
+    left: 25px; 
 }
