--- a/week-03/css/styles.css
+++ b/week-03/css/styles.css
@@ -129,3 +129,41 @@ ul li {
     height: 50px;
     justify-content: center;
 }
+
+/* Responsive.html */
+
+.containC {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+}
+
+.content {
+    align-items: center;
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    font-size: 36px;
+    font-weight: 800;
+    height: 250px;
+    justify-content: center;
+    width: 250px;
+}
+
+@media only screen and (max-width: 1024px) {
+    .containC {
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 780px) {
+    .containC {
+        flex-direction: row-reverse;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .containC {
+        flex-direction: column-reverse;
+    }
+}
