Responsiven CSS and Intro to JS

--- a/week-03/css/styles.css
+++ b/week-03/css/styles.css
@@ -140,3 +140,44 @@ ul li::before {
     height: 50px;
     justify-content: center;
 }
+
+/* Responsive.html */
+
+.containC {
+    display: flex;
+    flex-direction: row;
+}
+
+.content {
+    color: #eee;
+    background-color: #000;
+    border: solid 3px #eee;
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 250px;
+    width: 250px;
+}
+
+@media only screen and (min-width: 780px) and (max-width: 1024px) {
+    .containC {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 779px) {
+    .containC {
+        display: flex;
+        flex-direction: row-reverse;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .containC {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+}
