20th Sept lab lesson

--- a/finalproject/assets/styles.scss
+++ b/finalproject/assets/styles.scss
@@ -6,7 +6,12 @@ body {
 body.dark-theme {
     background-color: black;
     color: white;
+    footer {
+        color:black
+    }
+    
 }
+
 
 .form-control {
     width: 500px;
