--- a/finalproject/assets/styles.scss
+++ b/finalproject/assets/styles.scss
@@ -26,3 +26,12 @@ body.dark-theme {
 #theme {
     font-size: 10px;
 }
+
+.author-image {
+    max-width: 200px;
+    max-height: 200px;
+}
+
+.card {
+    margin-bottom: 20px;
+}
