--- a/finalproject/css/styles.css
+++ b/finalproject/css/styles.css
@@ -1,1 +1,1 @@
-body{background-color:#fff;transition:background-color .3s ease-in-out}body.dark-theme{background-color:#000;color:#fff}body.dark-theme footer{color:#000}.form-control{width:500px}@media (max-width:768px){.form-control{width:100%}}#theme{font-size:10px}
+body{background-color:#fff;transition:background-color .3s ease-in-out}body.dark-theme{background-color:#000;color:#fff}body.dark-theme footer{color:#000}.form-control{width:500px}@media (max-width:768px){.form-control{width:100%}}#theme{font-size:10px}.author-image{max-width:200px;max-height:200px}.card{margin-bottom:20px}
