--- a/finalproject/assets/styles.scss
+++ b/finalproject/assets/styles.scss
@@ -1,37 +1,35 @@
 body {
-    background-color: white;
-    transition: background-color 0.3s ease-in-out;
+  background-color: white;
+  transition: background-color 0.3s ease-in-out;
 }
 
 body.dark-theme {
-    background-color: black;
-    color: white;
-    footer {
-        color:black
-    }
-    
+  background-color: black;
+  color: white;
+  footer {
+    color: black;
+  }
 }
 
-
 .form-control {
-    width: 500px;
+  width: 500px;
 }
 
 @media (max-width: 768px) {
-    .form-control {
-        width: 100%;
-    }
+  .form-control {
+    width: 100%;
+  }
 }
 
 #theme {
-    font-size: 10px;
+  font-size: 10px;
 }
 
 .author-image {
-    max-width: 200px;
-    max-height: 200px;
+  max-width: 200px;
+  max-height: 200px;
 }
 
 .card {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
